@@ -1,3 +1,11 @@
+2008-05-28  kitone  <kitone@gna.org>
+
+	* src/Makefile.am:
+	* src/SubtitleTags.cc:
+	* src/SubtitleTags.h:
+	* src/formats/SubtitleMicroDVD.cc:
+	First work for tags support.
+
 2008-05-26  kitone  <kitone@gna.org>
 
 	* Makefile.am:
